<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/sixteen">

            <EditText
                android:id="@+id/old_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:background="@android:color/white"
                android:hint="@string/old_pwd_hint"
                android:inputType="textPassword"
                android:padding="@dimen/twelve"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:background="@android:color/white"
                android:hint="@string/new_pwd_hint"
                android:inputType="textPassword"
                android:padding="@dimen/twelve"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/new_pwd_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:background="@android:color/white"
                android:hint="@string/new_pwd_repeat_hint"
                android:inputType="textPassword"
                android:padding="@dimen/twelve"
                android:textSize="@dimen/sixteen" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1.0"
                android:enabled="false"
                android:text="@string/sure" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
