<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/sixteen">

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sixteen"
            android:layout_marginTop="64dp"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/twelve"
            android:textSize="@dimen/sixteen" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/twelve"
            android:textSize="@dimen/sixteen" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:background="@drawable/bg_button_selector"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</LinearLayout>
