<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/sixteen"
            android:paddingTop="@dimen/sixteen">

            <android.support.v7.widget.CardView
                android:id="@+id/avatar_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg_color_selector"
                android:clickable="true"
                android:onClick="modifyAvatarImage">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginRight="@dimen/sixteen"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:text="@string/avatar"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/w_sixteen" />

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_avatar"
                    android:padding="1dp"
                    android:src="@drawable/ic_avatar_default" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/name_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twelve"
                android:background="@drawable/item_bg_color_selector"
                android:clickable="true"
                android:onClick="modifyName">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginRight="@dimen/sixteen"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:text="@string/name"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/w_sixteen" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/sixteen"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="@dimen/sixteen"
                    android:ellipsize="end"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/w_fourteen" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/gender_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twelve"
                android:background="@drawable/item_bg_color_selector">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginRight="@dimen/sixteen"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:text="@string/gender"
                    android:textColor="@color/unable_text_color"
                    android:textSize="@dimen/w_sixteen" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/sixteen"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="@dimen/sixteen"
                    android:textColor="@color/unable_text_color"
                    android:textSize="@dimen/w_fourteen" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/sign_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twelve"
                android:background="@drawable/item_bg_color_selector"
                android:clickable="true"
                android:onClick="modifySign">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/sixteen"
                    android:layout_marginRight="@dimen/sixteen"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:text="@string/sign"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/w_sixteen" />

                <TextView
                    android:id="@+id/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/sixteen"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="@dimen/sixteen"
                    android:ellipsize="end"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/w_fourteen" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
